SET(PACKAGE_NAME NLL_LOCATOR)

SET(NLL_SOURCE_DIR ${SC3_PACKAGE_SOURCE_DIR}/libs/3rd-party/nll)
#AUX_SOURCE_DIRECTORY(${NLL_SOURCE_DIR} LIBNLL_SOURCES)
#AUX_SOURCE_DIRECTORY(${NLL_SOURCE_DIR}/alomax_matrix LIBNLL_ALOMAX_MATRIX_SOURCES)
FILE(GLOB LIBNLL_SOURCES ${NLL_SOURCE_DIR}/*.c)
FILE(GLOB LIBNLL_ALOMAX_MATRIX_SOURCES ${NLL_SOURCE_DIR}/alomax_matrix/*.c)
FILE(GLOB LIBNLL_ALOMAX_GEOMETRY_SOURCES ${NLL_SOURCE_DIR}/geometry/*.c)
FILE(GLOB LIBNLL_ALOMAX_STATS_SOURCES ${NLL_SOURCE_DIR}/matrix_statistics/*.c)
FILE(GLOB LIBNLL_ALOMAX_OCTTREE_SOURCES ${NLL_SOURCE_DIR}/octtree/*.c)
FILE(GLOB LIBNLL_ALOMAX_RAN1_SOURCES ${NLL_SOURCE_DIR}/ran1/*.c)
FILE(GLOB LIBNLL_ALOMAX_VECTOR_SOURCES ${NLL_SOURCE_DIR}/vector/*.c)

# For macOS add open_memstream porting since this function is missing 
IF (APPLE)
    FILE(GLOB LIBNLL_OPEN_MEMSTREAM_MACOS_SOURCES ${NLL_SOURCE_DIR}/open_memstream-macos/*.c)
ENDIF (APPLE)

IF(NOT ${CMAKE_SYSTEM_NAME} MATCHES "Darwin")
	IF (CMAKE_COMPILER_IS_GNUCC)
		ADD_DEFINITIONS(-D_GNU_SOURCE)
	ENDIF (CMAKE_COMPILER_IS_GNUCC)
ELSE(NOT ${CMAKE_SYSTEM_NAME} MATCHES "Darwin")
	ADD_DEFINITIONS(-DINLINE="")
ENDIF(NOT ${CMAKE_SYSTEM_NAME} MATCHES "Darwin")

# Required for gcc >= 5, the default for inline linking
# has changed
IF (CMAKE_COMPILER_IS_GNUCC)
	IF (NOT GCC_VERSION_MAJOR LESS 5)
		SET(EXTERN_INLINE "extern inline")
		ADD_DEFINITIONS(-DINLINE=${EXTERN_INLINE})
	ENDIF (NOT GCC_VERSION_MAJOR LESS 5)
ENDIF (CMAKE_COMPILER_IS_GNUCC)

IF (APPLE)
    SET( ${PACKAGE_NAME}_SOURCES
        ${LIBNLL_OPEN_MEMSTREAM_MACOS_SOURCES}
    )
ENDIF (APPLE)
    	
SET(${PACKAGE_NAME}_SOURCES
	    ${LIBNLL_SOURCES}
	    ${LIBNLL_ALOMAX_MATRIX_SOURCES}
	    ${LIBNLL_ALOMAX_GEOMETRY_SOURCES}
	    ${LIBNLL_ALOMAX_STATS_SOURCES}
	    ${LIBNLL_ALOMAX_OCTTREE_SOURCES}
	    ${LIBNLL_ALOMAX_RAN1_SOURCES}
	    ${LIBNLL_ALOMAX_VECTOR_SOURCES}
        nll_locator.cpp
)

IF (APPLE)
    SET(${PACKAGE_NAME}_HEADERS nll_locator.h open_memstream.h fmemopen.h)
    INCLUDE_DIRECTORIES(${NLL_SOURCE_DIR}/open_memstream-osx)
ELSE ()
    SET(${PACKAGE_NAME}_HEADERS nll_locator.h)
ENDIF (APPLE)

INCLUDE_DIRECTORIES(${NLL_SOURCE_DIR})
INCLUDE_DIRECTORIES(${NLL_SOURCE_DIR}/geometry)
INCLUDE_DIRECTORIES(${NLL_SOURCE_DIR}/ran1)

INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR})
INCLUDE_DIRECTORIES(${CMAKE_CURRENT_INCLUDE_DIR})

SC_ADD_PLUGIN_LIBRARY(${PACKAGE_NAME} locnll "")
SC_LINK_LIBRARIES_INTERNAL(locnll core)
TARGET_COMPILE_FEATURES(locnll PUBLIC c_std_99)

FILE(GLOB descs "${CMAKE_CURRENT_SOURCE_DIR}/descriptions/*.xml")
INSTALL(FILES ${descs} DESTINATION ${SC3_PACKAGE_APP_DESC_DIR})
